--- a/menuCabecario.css
+++ b/menuCabecario.css
@@ -11,7 +11,7 @@
 }
 .navM {
     width: auto;
-    background-color: #362b2b;
+    background-color: #493d3d;
     padding: 0 20px;
     justify-content: space-between;
     align-items: center;
@@ -23,14 +23,14 @@
     display: flex;
     flex-direction: row;
 }
-liM pM {
+.liM .pM {
     margin: 10px 20px; /* Adjust the value as needed */
 }
 
-liM {
+.liM {
     padding: 0;
 }
-h1M {
+.h1M {
     margin: 0;
     padding: 10px;
 }
