--- a/player.css
+++ b/player.css
@@ -1,6 +1,9 @@
-.body, .html {
+* {
     margin: 0;
     padding: 0;
+}
+.body {
+
     display: flex;
     flex-direction: column;
     align-items: center;
