--- a/menu.css
+++ b/menu.css
@@ -151,8 +151,40 @@ a{
     opacity: 1;
     transition: all 1.5s ease-out;
 }
+h2 {
+    margin: 10px 30px 16px 140px;
+}
+.title h1{
+
+    font-size: 84px;
+    /*font-weight: 500;*/
+    color: #844421;
+    letter-spacing: 10px;
+    margin: 10px 30px 16px 140px;
+}
+.title span{
+
+    color: #DCB494;
+    font-size: 60px;
+    margin: 10px 10px 16px 140px;
+}
 
 @media (max-width: 750px)  {
+    .title h1 {
+        font-size: 42px;
+        color: #cb9f87;
+        letter-spacing: 10px;
+        margin: 10px 30px 16px 70px;
+    }
+    h2 {
+        margin: 10px 30px 16px 70px;
+    }
+    .title span{
+
+        color: #DCB494;
+        font-size: 30px;
+        margin: 10px 30px 5px 70px;
+    }
     .sidebar-menu{
 
         height: 100%;
@@ -174,7 +206,7 @@ a{
 
     .sidebar-menu{
 
-        width: 30px;
+        width: 4px;
         transition: all .4s ease-out;
         overflow-x: hidden;
     }
@@ -277,20 +309,6 @@ a{
     margin-bottom: 50px;
 }
 
-.title span{
-
-    color: #DCB494;
-    font-size: 60px;
-}
-
-.title h1{
-
-    font-size: 84px;
-    font-weight: 500;
-    color: #844421;
-    letter-spacing: 10px;
-    margin-top: 0;
-}
 
 .content .divisor{
 
