--- a/carrinho.css
+++ b/carrinho.css
@@ -9,7 +9,10 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
-
+img {
+    width: 200px;
+    height: 200px;
+}
 
 body > main {
     background: #fff;
